fix padding to prevent footer to overlap long page content

--- a/themes/kdevelop/styles/20-main-layout.css
+++ b/themes/kdevelop/styles/20-main-layout.css
@@ -62,7 +62,7 @@ html, body {
   position: relative;
   float: left;
   padding-top: 121px;     /* H height + H spacing */
-  padding-bottom: 45px;   /* F height */
+  padding-bottom: 65px;   /* F height */
 }
 
 /* Left Column */
